# RSHash

./: CMakeLists.txt  LICENSE  README.md  prepare.sh  runExperiments.sh  runExperimentsVL.sh  runIntegers.sh  runStrings.sh
benchmark/: BSBenchmark.hpp  RSBenchmark.hpp  RSHashBenchmark.hpp  artBenchmark.hpp  btreeBenchmark.hpp  integerDistributions.cpp  pgmBenchmark.hpp  robinBenchmark.hpp  simpleMmphfBenchmark.hpp  stdmapBenchmark.hpp  stdumapBenchmark.hpp  stringDistributions.cpp
data/: extract_from.py  extract_value.py  prepro_english.py  prepro_xml.py
extlib/RadixSpline/include/rs/: multi_map.h
extlib/ds2i/: optimal_partition.hpp  partitioned_sequence.hpp
extlib/simpleRibbon/: .gitmodules  CMakeLists.txt  README.md  SimpleRibbon.cpp
extlib/simpleRibbon/extlib/ribbon/DySECT/utils/: command_line_parser.hpp  pin_thread.hpp  thread_coordination.hpp
extlib/simpleRibbon/extlib/ribbon/ips2ra/include/ips2ra/: utils.hpp
extlib/simpleRibbon/include/: MultiRetrievalDataStructure.hpp  SimpleRibbon.h
include/: ART.hpp  BS.hpp  BS4s.hpp  LeMonHash.hpp  LeMonHashHeuristic.hpp  PGM.hpp  RS.hpp  RS4s.hpp  RSHash.hpp  RSHash4s.hpp  btree.hpp  btree4s.hpp  robin.hpp  robin4s.hpp  stdmap.hpp  stdmap4s.hpp  stdumap.hpp  stdumap4s.hpp
include/art/: art.hpp  node_16.hpp
include/bucket_mapping/support/: PGM.hpp
include/stx/: btree.h
include/support/: AlphabetMap.h  AlphabetMaps.h
include/support/sequence/: BucketOffsets.hpp
