cmake_minimum_required(VERSION 3.10)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

project(SimpleRibbon)
set(PROJECT_VENDOR "Hans-Peter Lehmann")
set(PROJECT_URL "https://github.com/ByteHamster/SimpleRibbon")
set(PROJECT_DESCRIPTION "BuRR (bumped ribbon retrieval), but with CMake support and a pre-compiled library to reduce compile times")

if(NOT TARGET SimpleRibbon)
    if(NOT TARGET tlx)
        set(TLX_INSTALL_INCLUDE_DIR tlx CACHE PATH "Workaround for TLX breaking the first cmake call")
        add_subdirectory(extlib/ribbon/tlx)
    endif()

    if(NOT TARGET ips2ra)
        set(IPS2RA_DISABLE_PARALLEL ON CACHE PATH "FindTBB greps a file that does not exist in recent TBB versions")
        add_subdirectory(extlib/ribbon/ips2ra)
    endif()

    add_library(SimpleRibbon SHARED SimpleRibbon.cpp)
    target_include_directories(SimpleRibbon PRIVATE extlib/ribbon/DySECT)
    target_include_directories(SimpleRibbon PRIVATE extlib/ribbon)
    target_include_directories(SimpleRibbon PUBLIC include)
    target_link_libraries(SimpleRibbon PRIVATE ips2ra tlx)

    add_library(RibbonSorter SHARED extlib/ribbon/sorter.cpp)
    target_link_libraries(RibbonSorter PUBLIC tlx ips2ra)
    target_link_libraries(SimpleRibbon PUBLIC RibbonSorter)
endif()
